FIX: swagger doc comments, request/response models in the user handler
