# internal/http/handlers/user/user.go
@@ -24,11 +24,31 @@ func NewUserHandler(s app.UserService, l *log.Logger) *UserHandler {
 
 // Register adds the users endpoints to the provided router.
 func (u *UserHandler) Register(r fiber.Router) {
+	// swagger:route POST /users createUser
+	//
+	// Creates a new user.
+	//
+	// Creates a new user in the system with the provided attributes.
+	// Assigns the user an ID upon posting.
+	//
+	// Consumes:
+	// - application/json
+	//
+	// Produces:
+	// - application/json
+	//
+	// Schemes: http, https
+	//
+	// Security:
+	// - api_key:
+	//
+	// responses:
+	// 201: usersResponse
 	r.Post("/users", u.Create)
 }
 
 // UserFromRequest creates a user entity from an api request.
-func UserFromRequest(req *userRequest) *app.User {
+func UserFromRequest(req *RequestBody) *app.User {
 	return &app.User{
 		FirstName: req.Data.Attributes.FirstName,
 		LastName:  req.Data.Attributes.LastName,
@@ -36,12 +56,12 @@ func UserFromRequest(req *userRequest) *app.User {
 	}
 }
 
-// BuildUserResponse builds an api response from a user entity.
-func BuildUserResponse(userID app.UserID, user *app.User) *userResponse {
-	return &userResponse{
-		Data: userObject{
+// BuildResponse builds an api response from a user entity.
+func BuildResponse(userID app.UserID, user *app.User) *ResponseBody {
+	return &ResponseBody{
+		Data: ResponseData{
 			ID: string(userID),
-			Attributes: userAttributes{
+			Attributes: Attributes{
 				FirstName: user.FirstName,
 				LastName:  user.LastName,
 				Email:     user.Email,
